--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "customize-cra": "^0.5.0",
     "node-sass": "^4.12.0",
     "react-app-rewired": "^2.1.3",
-    "sass-loader": "^7.2.0"
+    "sass-loader": "^7.2.0",
+    "styled-components": "^5.0.0-beta.8"
   }
 }
