--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "keymirror": "^0.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
@@ -36,6 +37,8 @@
     "customize-cra": "^0.5.0",
     "node-sass": "^4.12.0",
     "react-app-rewired": "^2.1.3",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
     "sass-loader": "^7.2.0",
     "styled-components": "^5.0.0-beta.8"
   }
